Fixed footer links z-index

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -28,5 +28,5 @@
 
 .footerNavLink {
 	font-family: var(--amaticbold);
-	z-index: 9;
+	z-index: 8;
 }
